resolved the horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html {
   font-size: 18px;
   scroll-behavior: smooth;
   background-color: #212221;
-  width: 100%;
+  /*width: 100%;*/
 }
 @media (max-width: 900px) {
   html { font-size: 17px; }
@@ -50,6 +50,7 @@ main h1, main h2{
 main{
 	background-color: #212221;
 	color: #efefeb;
+	overflow-x: hidden;	
 }
 
 header{
